--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "netgen/ngsymfonytools": "~1.0"
     },
     "autoload": {
-        "psr-0": {"EzSystems\\ngsymfonytoolsBundle": ""}
+        "psr-0": {"EzSystems\\NgsymfonytoolsBundle": ""}
     },
-    "target-dir": "EzSystems/ngsymfonytoolsBundle"
+    "target-dir": "EzSystems/NgsymfonytoolsBundle"
 }
